# rcp-api

./: .env.example  .gitignore  pyproject.toml  pytest.ini
config/: settings.py  testing.py  urls.py
src/core/: admin.py  models.py
src/core/migrations/: 0001_initial.py  0002_recipe.py  0003_tag_recipe_tags.py  0004_ingredient.py  0005_recipe_ingredients.py  0006_recipe_image.py
src/core/tests/: test_admin.py  test_modesl.py
src/kilo/: apps.py  tests.py  urls.py  views.py
src/recipe/: serializers.py  urls.py  views.py
src/recipe/tests/: test_ingredients_api.py  test_recipe.py  test_tags_api.py
src/user/: serializers.py  urls.py  views.py
src/user/tests/: test_user_api.py
